# pi-metaboqc

./: .gitignore  README.md  pyproject.toml
examples/: debug_script.ipynb  quickstart.ipynb  script_debugger.ipynb  tutorial_step_by_step.ipynb
pi-metaboqc/: .gitignore  README.md  pyproject.toml
pi-metaboqc/examples/: quickstart.ipynb
pi-metaboqc/src/pimqc/: assessment.py  dataset_builder.py  filtering.py  normalization.py  pca_utils.py  pipeline.py  report_utils.py
pi-metaboqc/src/pimqc/data/: pipeline_parameters.json  project_intensity.csv  project_meta.csv
src/pimqc/: __init__.py  assessment.py  config_schema.py  core_classes.py  correction.py  data_quality_assessment.py  data_signal_correction.py  dataset_builder.py  filtering.py  imputation.py  invalid_feature_sample_filtering.py  invalid_feature_sample_filtering_tmp.py  io_utils.py  normalization.py  pca_utils.py  pipeline.py  plot_utils.py  report_utils.py  stat_utils.py  visualizer_classes.py
src/pimqc/data/: Parameters_Guide.md  pipeline_parameters.json  pipeline_parameters.toml  pipeline_parameters.yaml  project_intensity.csv  全局参数配置指南.md
src/pimqc/templates/: demo.json  report_template.md.j2
tests/: conftest.py  test_dataset_builder.py  test_pipeline.py  test_quality_assessment.py  test_quantile_bridge.py  test_vsn_bridge.py
