[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-metaboqc"
dynamic = ["version", "readme"]
authors = [
    { name="KaikunXu", email="xukaikun.bio@qq.com"},
]
description = "A comprehensive LC-MS metabolomics data quality control module."

requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Metabolomics"
]
dependencies = [
    "ruamel.yaml>=0.17.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.2",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "loguru>=0.6.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0"
]

[project.urls]
"Homepage" = "https://github.com/KaikunXu/pi-metaboqc"
"Bug Tracker" = "https://github.com/KaikunXu/pi-metaboqc/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pimqc*"]

[tool.setuptools.package-data]
"pimqc.data" = ["*.csv"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "rpy2>=3.5.0"
]

[tool.setuptools.dynamic]
version = {attr = "pimqc.__version__"}
readme = {file = ["README.md"]}