# ==============================================================================
# BUILD SYSTEM CONFIGURATION
# Defines the PEP 517 build backend and requirements for packaging.
# ==============================================================================
[build-system]
requires = ["setuptools>=61.0"]  # Minimal version supporting pyproject.toml
build-backend = "setuptools.build_meta"

# ==============================================================================
# PROJECT METADATA
# Core package information for PyPI distribution and discovery.
# ==============================================================================
[project]
name = "pi-metaboqc"
dynamic = ["version", "readme"]  # Metadata extracted from source and files
authors = [
    { name="KaikunXu", email="xukaikun.bio@qq.com"},
]
keywords = [
    "chemistry",
    "metabolomics",
    "bioinformatics",
    "chemometrics",
    "lc-ms",
    "mass-spectrometry",
    "data analysis",
    "quality control",
    "quality assurance"
]
description = "A comprehensive LC-MS metabolomics data quality control module."

requires-python = ">=3.9"       # Supports modern Python features and type hints
license = {file = "LICENSE"}    # Path to the MIT license file
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

# ==============================================================================
# PROJECT DEPENDENCIES
# Categorized runtime requirements for core and extended functionality.
# ==============================================================================
dependencies = [
    # --- Infrastructure & Configuration ---
    "ruamel.yaml>=0.17.0",   # Advanced YAML parsing with comment preservation
    
    # --- Scientific Computing & Data Processing ---
    "numpy>=1.21.0",         # N-dim arrays and linear algebra operations
    "pandas>=1.3.0",         # Core DataFrame structures for metabolomics data
    "scipy>=1.7.0",          # Scientific algorithms and statistical testing
    "scikit-learn>=1.0.2",   # Machine learning for PCA and imputation tasks
    
    # --- Performance & Engineering ---
    "joblib>=1.3.0",         # Lightweight pipelining and parallel processing
    "tqdm>=4.65.0",          # Fast, extensible progress bars for loops
    "loguru>=0.6.0",         # Simplified and robust logging management
    
    # --- Data Visualization ---
    "matplotlib>=3.3.0",     # Fundamental 2D plotting engine
    "seaborn>=0.11.0",       # Statistical data visualization based on mpl
    "plotnine>=0.10.1",      # Grammar of Graphics implementation 
    
    # --- Report Assembly & Image Handling ---
    "patchworklib>=0.6.2",   # Composition tool for matplotlib subplots
    "pypdf>=3.0.0",          # Pure-Python PDF merging and page transformation
    "pymupdf>=1.22.0",       # High-performance PDF rendering (fitz)
    "ipython>=7.0.0",        # Interactive display support for Jupyter

    # --- Markdown & Report Generation ---
    "Jinja2>=3.1.0",         # Templating for dynamic MD reports
    "tabulate>=0.9.0",       # Converts DataFrames to MD tables
    "mdutils>=1.6.0",        # Structured MD file creation via Python API
    "pypandoc>=1.11"         # Convert MD to PDF/DOCX/HTML
]

# ==============================================================================
# PROJECT URLS
# External links for source code, documentation, and issue tracking.
# ==============================================================================
[project.urls]
"Homepage" = "https://github.com/KaikunXu/pi-metaboqc"
"Bug Tracker" = "https://github.com/KaikunXu/pi-metaboqc/issues"

# ==============================================================================
# SETTOOLS SPECIFIC CONFIGURATION
# Internal settings for package discovery and non-code asset management.
# ==============================================================================
[tool.setuptools.packages.find]
where = ["src"]                 # Locate source code under the src directory
include = ["pimqc*"]            # Include only packages starting with pimqc

[tool.setuptools.package-data]
"pimqc.data" = ["*.csv"]        # Include reference csv data in distribution

[tool.setuptools.dynamic]
version = {attr = "pimqc.__version__"} # Extract version from __init__.py
readme = {file = "README.md", content-type = "text/markdown"}

# ==============================================================================
# OPTIONAL DEPENDENCIES
# Requirements for testing and specific R-integration workflows.
# ==============================================================================
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",            # Core testing framework
    "rpy2>=3.5.0",              # R-interface for algorithm benchmarking
    "tabulate>=0.10.0"          # Enhanced table support for test reports
]